# ai-sandbox-1

./: CMakeLists.txt
src/: binance_client.cpp  binance_client.h  main.cpp
